--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,28 +15,28 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <h3 class="subtitle">Competency Model</h3>
+    <h3 class="subtitle">Edit User Profile</h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle">Create New User</h4>
+    <h4 class="widgettitle">Edit User Profile</h4>
     <div class="widgetcontent">
       <div class="divider15"></div>
       <%= simple_form_for(@user, :html => {:class => 'form-horizontal', :multipart => true }) do |f| %>
-        <%= f.input :name %>
-        <%= f.input :email %>
-        <%= f.association :position, label_method: :name, value_method: :id, include_blank: false %>
-        <%= f.association :manager, collection: User.staff, label_method: :name, value_method: :id %>
-        <%= f.input :department %>
-        <%= f.input :department_level %>
-        <%= f.input :staff_id %>
-        <%= f.input :self_intro, :as => :text, :input_html => { :class => "span5",  :cols => 50, :rows => 5 } %>
-        <%= f.input :joined_at, as: :date, start_year: Date.today.year - 90,
-                              end_year: Date.today.year,
+        <%= f.input :name, :label => '姓名：' %>
+        <%= f.input :email, :label => '电子邮件：', :hint => '' %>
+        <%= f.association :position, :label => '职位：', label_method: :name, value_method: :id, include_blank: false %>
+        <%= f.association :manager, :label => '上级主管：', collection: User.staff, label_method: :name, value_method: :id %>
+        <%= f.input :department, :label => '部门名称：' %>
+        <%= f.input :department_level, :label => '部门级别：' %>
+        <%= f.input :staff_id, :label => '员工号：' %>
+        <%= f.input :self_intro, :label => '个人介绍：', :as => :text, :input_html => { :class => "span5",  :cols => 50, :rows => 8 } %>
+        <%= f.input :joined_at, :label => '入职时间：', as: :date, start_year: Date.today.year - 90,
+                              end_year: Date.today.year - 12,
                               order: [:year, :month, :day] %>
-        <%= f.input :birthday, as: :date, start_year: Date.today.year - 90,
-                              end_year: Date.today.year - 16,
+        <%= f.input :birthday, :label => '出身年月：', as: :date, start_year: Date.today.year - 90,
+                              end_year: Date.today.year - 12,
                               order: [:year, :month, :day] %>
         <div class="control-group file optional">
-          <label class="file optional control-label" for="user_avatar">Avatar</label>
+          <label class="file optional control-label" for="user_avatar">上传头像：</label>
           <div class="controls">
             <div class="fileupload fileupload-new" data-provides="fileupload">
             <div class="input-append">
@@ -44,18 +44,18 @@
               <i class="iconfa-file fileupload-exists"></i>
               <span class="fileupload-preview"></span>
               </div>
-              <span class="btn btn-file"><span class="fileupload-new">Select file</span>
-              <span class="fileupload-exists">Change</span>
+              <span class="btn btn-file"><span class="fileupload-new"><%= t("course.all.select") %></span>
+              <span class="fileupload-exists"><%= t("course.all.change") %></span>
               <input class="file optional" id="user_avatar" name="user[avatar]" type="file" /></span>
-              <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
+              <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t("course.all.remove") %></a>
             </div>
-            <p class="help-block">No special characters.</p>
+            <p class="help-block">支持格式（png, jpg, gif, bmp），大小不超过1MB，建议分辨率大于200x200</p>
             </div>
           </div>
         </div>
   
         <div class="form-actions">
-        <%= f.button :submit, :class => "btn-primary"  %>
+        <%= f.button :submit, '修改用户信息', :class => "btn-primary"  %>
         </div>
       <% end %>
     </div>
