--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -4,9 +4,12 @@
 
 .class-course { }
 .class-course img { width: 300px }
-.course-banner { margin-left: 310px; padding: 10px 0; text-align: center; min-height: 200px; }
-.course-banner h3 { margin: 20px 0; }
-.course-banner h4 { margin: 20px 0; color: #555; }
+.course-banner { margin-left: 320px; padding: 10px 0; }
+.course-banner ul {
+  list-style-type: none; 
+  padding: 10px 0; 
+  margin: 0px;
+}
 .course-banner button { margin: 18px 0;}
 
 .course-introduction { 
