fix search zh-CN

--- a/app/views/shared/_pageheader.html.erb
+++ b/app/views/shared/_pageheader.html.erb
@@ -9,7 +9,7 @@
 
 <div class="pageheader">
   <form action="#" method="post" class="searchbar">
-    <input type="text" name="keyword" placeholder="To search course and hit enter..." />
+    <input type="text" name="keyword" placeholder= <%=t("course.all.notic3")  %> />
   </form>
   <div class="pageicon"><span class="<%= yield(:page_icon) %>"></span></div>
   <div class="pagetitle">
