--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="footer">
   <div class="footer-left">
-    <span>&copy; 2013. Evolve Solution. All Rights Reserved.</span>
+    <span>&copy; 2010 Link Resources International Consulting Group. All rights reserved</span>
   </div>
 </div><!--footer-->
