Link data mining page in left menu.

--- a/app/views/shared/_leftmenu.html.erb
+++ b/app/views/shared/_leftmenu.html.erb
@@ -50,7 +50,7 @@
         <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-calendar"></span> 培训计划管理</a></li>
         <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-signal"></span> 能力评估管理</a></li>
         <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-rss"></span> 社区管理</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#"><span class="iconfa-bar-chart"></span> 统计中心</a></li>
+        <li class="<%= "active" if active == 'datamining' %>"><a href="<%= datamining_path %>"><span class="iconfa-bar-chart"></span> 统计中心</a></li>
       </ul>
       </li>
       <% end %>
