Some course will not related to competency level. Add paginate for user model.

--- a/app/views/admin/admin/user.html.erb
+++ b/app/views/admin/admin/user.html.erb
@@ -63,6 +63,7 @@
           <% end %>
         </tbody>
       </table>
+      <div class="page-wrapper"><%= paginate @users if @users %></div>
       <% end %>
     </div>
   </div>
