--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -52,7 +52,7 @@
           <li>授课方式：<%= @course.teach_type %></li>
           <li>课程类型：<%= @course.course_type %></li>
           <li>课程时长：<%= @course.duration %> 小时</li>
-          <% if course.competency_levels.size > 0 %>
+          <% if @course.competency_levels.size > 0 %>
           <li>所属胜任力级别：<%= (@course.competency_levels.first.competency.name +'（' + level_name(@course.competency_levels.first.level) + '）') %></li>
           <% end %>
         </ul>
