--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -53,7 +53,7 @@
           <li>课程类型：<%= @course.course_type %></li>
           <li>课程时长：<%= @course.duration %> 小时</li>
           <% if @course.competency_levels.size > 0 %>
-          <li>所属胜任力级别：<%= (@course.competency_levels.first.competency.name +'（' + level_name(@course.competency_levels.first.level) + '）') %></li>
+          <li>所属胜任力级别：<%= @course.competency_levels.first.competency.name %> (<%=level_name(@course.competency_levels.first.level)%>)</li>
           <% end %>
         </ul>
         <span><%= link_to @course.creator.name, user_path(@course.creator) %> <%= t("course.all.create") %> <%= distance_of_time_in_words_to_now(@course.created_at) + t("course.all.ago") %></span>
