change duration to minitus. display user email address.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -105,6 +105,7 @@
           <li><%= t("users.all.position")%>: <%= @user.position.name %></li>
           <li><%= t("users.all.telephone")%>: <%= @user.phone_num %></li>
           <li><%= t("users.all.mobile")%>: <%= @user.mobile_phone %></li>
+          <li>电子邮件: <%= @user.mobile_phone %></li>
         </ul>
       </div>
     </div>
