--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -102,7 +102,7 @@
         <h4><%= link_to @user.name, user_path(@user) %></h4>
         <ul class="info-details">
           <li><%= t("users.all.department") %>.: <%= @user.department %></li>
-          <li><%= t("users.all.position")%>: <%= @user.position.name %></li>
+          <li><%= t("users.all.position")%>: <%= @user.position.name unless @user.position.blank? %></li>
           <li><%= t("users.all.telephone")%>: <%= @user.phone_num %></li>
           <li><%= t("users.all.mobile")%>: <%= @user.mobile_phone %></li>
           <li>电子邮件: <%= @user.email %></li>
