change the display information for course list.

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -276,6 +276,8 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 .courselist li { display: block; border-bottom: 1px solid #ddd; padding: 15px; }
 .courselist li img { display: block; width: 200px; }
 .courselist li .course-info { margin-left: 220px; min-height: 150px;}
+.courselist li .course-info ul { list-style-type: none; padding: 5px 0; margin: 0px;}
+.courselist li .course-info li { padding: 0; border-bottom: 0;}
 .courselist li p:last-child { margin-bottom: 0; }
 .courselist li .btn { margin-right: 3px; }
 .courselist li .btn span { margin-right: 5px; }
