--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,41 +1,41 @@
 <div class="header">
   <div class="logo">
-    <%= link_to image_tag('logo.png'), home_path %>
+    <%= link_to image_tag('logo.png'), current_user.admin? ? admin_dashboard_path : dashboard_user_path(current_user) %>
   </div>
   <div class="headerinner">
     <ul class="headmenu">
-      <% unless current_user.admin? %>
-      <li class="odd">
+      <%# unless current_user.admin? %>
+      <li class="odd <%= 'open' if @menu_category == 'header' and @menu_active == 'course' %>">
         <a href="<%= current_user.admin? ?  admin_manage_course_path : courses_path %>">
           <span class="head-icon iconfa-tasks"></span>
           <span class="headmenu-label">课程中心</span>
         </a>
       </li>
-      <li>
+      <li class="<%= 'open' if @menu_category == 'header' and @menu_active == 'teacher' %>">
         <a href="#">
           <span class="head-icon iconfa-group"></span>
           <span class="headmenu-label">讲师中心</span>
         </a>
       </li>
-      <li class="odd">
+      <li class="odd <%= 'open' if @menu_category == 'header' and @menu_active == 'competency' %>">
         <a href="<%= current_user.admin? ?  admin_manage_competency_path : competencies_path %>">
           <span class="head-icon iconfa-signal"></span>
           <span class="headmenu-label">能力中心</span>
         </a>
       </li>
-      <li>
-        <a href="">
+      <li class="<%= 'open' if @menu_category == 'header' and @menu_active == 'exam' %>">
+        <a href="<%= examinations_path %>">
           <span class="head-icon iconfa-certificate"></span>
           <span class="headmenu-label">考试中心</span>
         </a>
       </li>
-      <li class="odd">
+      <li class="odd <%= 'open' if @menu_category == 'header' and @menu_active == 'knowledge' %>">
         <a href="#">
           <span class="head-icon iconfa-question-sign"></span>
           <span class="headmenu-label">知识中心</span>
         </a>
       </li>
-      <% end %>
+      <%# end %>
       <li class="right">
         <div class="userloggedinfo">
           <%= image_tag user_avatar_path(current_user, :normal) %>
