--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -27,7 +27,7 @@
                         
     <h3 class="subtitle"><%= t("dashboard.competency.title") %></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"><span class="iconfa-signal"></span> <%= t("dashboard.competency.sub_title") %></h4>
+    <h4 class="widgettitle"><span class="iconfa-signal"></span> 我的胜任力</h4>
     <div class="widgetcontent nopadding">
       <div class="accordion">
         <% current_user.position.competency_levels.each do |cl| %>
