--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -105,7 +105,7 @@
     <div class="well user-info-box">
       <div class="user-info-image">
         <%= image_tag user_avatar_path(@user, :normal) %>
-        <% unless @user.id == current_user.id and current_user.admin? %>
+        <% unless @user.id == current_user.id or current_user.admin? %>
           <% unless current_user.following?(@user) %>
             <%= form_for(current_user.user_relations.build(leader_id: @user.id)) do |f| %>
             <%= f.hidden_field :leader_id %>
@@ -115,6 +115,9 @@
             <%= form_for(current_user.user_relations.find_by_leader_id(@user), html: { method: :delete }) do |f| %>
             <%= f.submit "取消关注", class: "btn btn-mini btn-block btn-warning " %>
             <% end %>
+          <% end %>
+          <% unless @user.id == current_user.id %>
+            <%= link_to "发信息".html_safe, '#', :class => "btn btn-mini btn-block btn-info " %>
           <% end %>
         <% end %>
       </div>
