--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -30,7 +30,7 @@
         </a>
       </li>
       <li class="odd <%= 'open' if @menu_category == 'header' and @menu_active == 'knowledge' %>">
-        <a href="#">
+        <a href="<%= knowledge_path %>">
           <span class="head-icon iconfa-question-sign"></span>
           <span class="headmenu-label">知识中心</span>
         </a>
