Add detsils page for demo.

--- a/app/views/site/knowledge.html.erb
+++ b/app/views/site/knowledge.html.erb
@@ -28,7 +28,7 @@ $(function() {
                                 <li>
                                     <img src="images/photos/thumb7.png" alt="" class="pull-left" />
                                     <div class="topic-info">
-                                        <h4><a href="">如何处理客户投诉？</a></h4>
+                                        <h4><a href="<%= details_path %>">如何处理客户投诉？</a></h4>
                                         <p><a href="">文华</a> 在 24 秒钟前提问</p>
                                         <p class="topic-content">我是一名个金客户经理，经常会遇到客户直接投诉我行业务，实际上并不是因为我的原因产生的，让我很苦恼。请问如何解决？</p>
                                         
